--- a/code-editor/styles.css
+++ b/code-editor/styles.css
@@ -1,62 +1,43 @@
 :host {
-  /* display: flex !important; */
-  /* flex-flow: row !important; */
-  height: -moz-available;
-  height: -webkit-fill-available;
+  display: flex;
+  flex-flow: column;
   box-sizing: content-box;
-  overflow-x: hidden;
+  overflow-x: scroll;
   overflow-y: scroll;
 }
 
 #wrapper {
-  min-height: 100%;
-  /* height: 100%; */
+  display: grid;
   width: 100%;
-  /* flex: 1 1 100%; */
+  height: 100%;
   box-sizing: content-box;
-
+  /* overflow-x: scroll; */
+  /* overflow-y: scroll; */
   position: relative;
-
   background-color: var(--code-gutter-background-color);
 }
 
 #content {
   color: var(--code-text-color);
-
   background-color: var(--code-background-color);
-
   font-size: var(--code-font-size);
   font-family: var(--code-font-family, monospace);
-
   tab-size: var(--tab-size, 4);
-
-  min-height: 100%;
-
-  /* user-select: text; */
+  /* flex: 1 1 100%; */
 }
 
-/* #wrapper.grid */
-:host(.wrapper-grid) #wrapper {
-  display: grid;
-  grid-template: 'content' auto / auto;
+/* :host(.wrap-lines) #wrapper {} */
+:host(.wrap-lines) #content {
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
 }
-
-/* #wrapper.grid > #content */
-:host(.wrapper-grid) #wrapper > #content {
-  grid-area: content;
+:host(.wrap-lines) slot#code::slotted(*) {
+  white-space: pre-wrap;
 }
 
 /* .line-numbers #content  */
 :host(.line-numbers) #content {
   margin-left: var(--code-gutter-width);
-}
-
-/* #content.grid */
-:host(.content-grid) #content {
-  display: grid;
-  grid-template:
-    'code'
-    auto / auto;
 }
 
 :host(code-editor) {
@@ -66,7 +47,7 @@
 
   --code-background-color: var(
     --code-theme-background-color,
-    var(--code-default-background-color, #fff)
+    var(--code-default-background-color, #fffc)
   );
   --code-text-color: var(--code-theme-text-color, var(--code-default-text-color, #559));
 
