--- a/code-editor/styles/theme/code-colors.css
+++ b/code-editor/styles/theme/code-colors.css
@@ -1,11 +1,11 @@
 :host {
   /* CODE */
 
-  --code-background-color: var(
-    --code-theme-background-color,
-    var(--code-default-background-color, #fffc)
+  --code-background: var(
+    --code-theme-background,
+    var(--code-default-background, #fffc)
   );
-  --code-text-color: var(--code-theme-text-color, var(--code-default-text-color, #559));
+  --code-text: var(--code-theme-text, var(--code-default-text, #559));
 
   /* GUTTER */
 
@@ -14,59 +14,59 @@
     var(--code-default-gutter-background, #ddde)
   );
 
-  --code-gutter-text-color: var(
-    --code-theme-gutter-text-color,
-    var(--code-default-gutter-text-color, #000)
+  --code-gutter-text: var(
+    --code-theme-gutter-text,
+    var(--code-default-gutter-text, #000)
   );
 
   /* TOKENS */
 
-  --code-punctuation-color: var(
-    --code-theme-punctuation-color,
-    var(--code-default-punctuation-color, currentcolor)
+  --code-punctuation: var(
+    --code-theme-punctuation,
+    var(--code-default-punctuation, currentcolor)
   );
-  --code-keyword-color: var(
-    --code-theme-keyword-color,
-    var(--code-default-keyword-color, currentcolor)
+  --code-keyword: var(
+    --code-theme-keyword,
+    var(--code-default-keyword, currentcolor)
   );
-  --code-operator-color: var(
-    --code-theme-operator-color,
-    var(--code-default-operator-color, currentcolor)
+  --code-operator: var(
+    --code-theme-operator,
+    var(--code-default-operator, currentcolor)
   );
-  --code-string-color: var(
-    --code-theme-string-color,
-    var(--code-default-string-color, currentcolor)
+  --code-string: var(
+    --code-theme-string,
+    var(--code-default-string, currentcolor)
   );
-  --code-comment-color: var(
-    --code-theme-comment-color,
-    var(--code-default-comment-color, currentcolor)
+  --code-comment: var(
+    --code-theme-comment,
+    var(--code-default-comment, currentcolor)
   );
-  --code-literal-color: var(
-    --code-theme-literal-color,
-    var(--code-default-literal-color, currentcolor)
+  --code-literal: var(
+    --code-theme-literal,
+    var(--code-default-literal, currentcolor)
   );
 }
 
 code.token.punctuation {
-  color: var(--code-punctuation-color);
+  color: var(--code-punctuation);
 }
 
 code.token.keyword {
-  color: var(--code-keyword-color);
+  color: var(--code-keyword);
 }
 
 code.token.operator {
-  color: var(--code-operator-color);
+  color: var(--code-operator);
 }
 
 code.token.string {
-  color: var(--code-string-color);
+  color: var(--code-string);
 }
 
 code.token.comment {
-  color: var(--code-comment-color);
+  color: var(--code-comment);
 }
 
 code.token.literal {
-  color: var(--code-literal-color);
+  color: var(--code-literal);
 }
