--- a/code-editor/styles/theme/code-theme.css
+++ b/code-editor/styles/theme/code-theme.css
@@ -1,23 +1,27 @@
+@import url('https://cdn.jsdelivr.net/npm/@typopro/web-iosevka/TypoPRO-Iosevka.css');
+
 :host([theme='default']),
 :host(:not([theme])),
 :host > .default-theme {
   /* CODE */
 
-  --code-theme-font-family: 'Iosevka-Term';
+  --code-theme-font: 'Iosevka', 'TypoPRO Iosevka Term', monospace;
 
   /* Avoid relative font-sizes */
   --code-theme-font-size: 13px;
 
-  --code-theme-background-color: #fff;
-  --code-theme-text-color: #559;
+  --code-theme-background: #fff;
+  --code-theme-text: #666;
 
   --code-theme-gutter-background: #f3f3f3aa;
-  --code-theme-gutter-text-color: #000;
+  --code-theme-gutter-text: #000;
 
-  --code-theme-punctuation-color: #555;
-  --code-theme-keyword-color: #80f;
-  --code-theme-operator-color: #f5a;
-  --code-theme-string-color: #4b9;
-  --code-theme-comment-color: #abb;
-  --code-theme-literal-color: #80f;
+  --code-theme-punctuation: cornflowerblue;
+  --code-theme-keyword: chocolate;
+  --code-theme-operator: limegreen;
+  --code-theme-string: cadetblue;
+  --code-theme-comment: #aaa;
+  --code-theme-literal: coral;
+
+  font-variant-ligatures: contextual;
 }
