--- a/code-editor/styles/demo.css
+++ b/code-editor/styles/demo.css
@@ -1,17 +1,16 @@
 @import './common.css';
 
 html {
-  width: 100vw;
-  height: 100vh;
-  max-width: 100vw;
-  max-height: 100vh;
-  min-width: 100vw;
-  min-height: 100vh;
+  display: flex;
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
 }
 
 body {
-  width: inherit;
-  height: inherit;
+  flex: 1;
 }
 
 :not(:defined) {
