--- a/archive/code-editor-1/styles.css
+++ b/archive/code-editor-1/styles.css
@@ -27,6 +27,8 @@
   background-color: var(--code-background-color);
   font-size: var(--code-font-size);
   font-family: var(--code-font-family, monospace);
+  -webkit-tab-size: var(--tab-size, 4);
+  -moz-tab-size: var(--tab-size, 4);
   tab-size: var(--tab-size, 4);
   /* flex: 1 1 100%; */
 }
